fixing font on small devices (#160)

--- a/unlock-protocol.com/src/assets/scss/index.scss
+++ b/unlock-protocol.com/src/assets/scss/index.scss
@@ -6,7 +6,6 @@
 
 body {
 	font-family: 'IBM Plex Sans','Helvetica Neue', Arial, sans-serif;
-	font-size: 2rem;
 }
 
 .page {
